# genai-projects-2025

./: inference.py  pyproject.toml  requirements.txt  train.py
src/configs/: persongen_train_lora.yaml
src/configs/datasets/: all_datasets.yaml
src/datasets/: dreambooth.py
src/model/sdxl/: lora.py
src/pipelines/: sdxl.py
src/trainer/: inferencer.py  lora_trainers.py
